[project]
name = "torappu"
version = "1.31.0"
description = "unpacker for an anime game"
authors = [
  { name = "daflyinbed", email = "1677759063@qq.com" },
  { name = "StarHeartHunt", email = "starheart233@gmail.com" },
]
requires-python = ">=3.12, <4.0"
readme = "README.md"
dependencies = [
  "lz4inv (>=0.2.0,<0.3.0)",
  "bson (>=0.5.10,<0.6.0)",
  "numpy (>=2.2.4,<3.0.0)",
  "click (>=8.1.7,<9.0.0)",
  "pydub (>=0.25.1,<0.26.0)",
  "fastcrc (>=0.3.2,<0.4.0)",
  "unitypy (==1.22.5)",
  "tenacity (>=9.0.0,<10.0.0)",
  "pycryptodome (>=3.18.0,<4.0.0)",
  "httpx (>=0.24.1,<1.0.0,!=0.28.0)",
  "loguru (>=0.7.0,<1.0.0)",
  "pydantic-settings (>=2.0.0,<3.0.0)",
  "sentry-sdk[loguru,httpx] (>=2.13.0,<3.0.0)",
]

[dependency-groups]
dev = ["ruff>=0.12.0,<0.13", "pre-commit>=4.0.0,<5"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.format]
line-ending = "lf"

[tool.ruff.lint]
select = [
  "F",     # pyflakes
  "W",     # pycodestyle warnings
  "E",     # pycodestyle errors
  "I",     # isort
  "UP",    # pyupgrade
  "ASYNC", # flake8-async
  "C4",    # flake8-comprehensions
  "T10",   # flake8-debugger
  "T20",   # flake8-print
  "PYI",   # flake8-pyi
  "Q",     # flake8-quotes
  "TC",    # flake8-type-checking
  "TID",   # flake8-tidy-imports
  "DTZ",   # flake8-datetimez
  "RUF",   # Ruff-specific rules
]
ignore = [
  "E402",   # module-import-not-at-top-of-file
  "UP037",  # quoted-annotation
  "RUF001", # ambiguous-unicode-character-string
  "RUF002", # ambiguous-unicode-character-docstring
  "RUF003", # ambiguous-unicode-character-comment
]

[tool.ruff.lint.isort]
known-first-party = ["torappu"]
extra-standard-library = ["typing_extensions"]

[tool.ruff.lint.extend-per-file-ignores]
"./scripts/*" = ["T201"]
"./docker/*" = ["T201"]

[tool.ruff.lint.pyupgrade]
keep-runtime-typing = true

[tool.pyright]
extraPaths = ["./"]
pythonVersion = "3.12"
pythonPlatform = "All"
executionEnvironments = [{ root = "./" }]

typeCheckingMode = "standard"
reportShadowedImports = false
disableBytesTypePromotions = true

[tool.uv.build-backend]
module-name = "torappu"
module-root = ""

[build-system]
requires = ["uv_build>=0.8.4,<0.9.0"]
build-backend = "uv_build"
